fix: fix map when header breaks on multilines

--- a/css/styles.css
+++ b/css/styles.css
@@ -335,7 +335,7 @@ nav h1 a {
   color: #ccc !important;
 }
 
-/* ====================== Home page media queries ====================== */
+/* ====================== media queries ====================== */
 
 @media screen and (max-width: 800px) {
   #restaurants-list li,
@@ -346,6 +346,17 @@ nav h1 a {
 
   #restaurants-list li:nth-child(2n) {
     margin: 15px 0 0 0;
+  }
+
+  .inside #maincontent {
+    display: block;
+  }
+
+  #restaurant-container, 
+  #reviews-container {
+    width: 85%;
+    margin: auto;
+    padding: 30px 0;
   }
 }
 
@@ -359,6 +370,11 @@ nav h1 a {
 
   #cuisines-select {
     margin: 0 0 10px 143px;
+  }
+
+  #restaurant-container, 
+  #reviews-container {
+    width: 90%;
   }
 }
 
